# AINewsTodayChecker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  flowchart TD.md  pyproject.toml
.codex/: config.toml
.github/workflows/: daily.yml
app/: __init__.py  main.py
app/api/: deps.py  routes_episodes.py  routes_jobs.py
app/clients/: __init__.py  gemini_client.py  openai_client.py  perplexity_client.py  podcast_client.py  slack_client.py
app/core/: config.py  logging.py
app/db/: init_db.py  session.py
app/models/: claim.py  episode.py  notification_log.py  verdict.py
app/notifier/: __init__.py  slack.py
app/persistence/: state_store.py
app/schemas/: claim.py  episode.py  job.py  verdict.py
app/services/: claim_extractor.py  claim_parser.py  episode_service.py  fetch_service.py  job_service.py  normalize_service.py  report_builder.py  scoring_service.py  verifier_service.py
app/utils/: hashes.py  text.py
artifacts/: gemini-response.json  perplexity-response.json  prompt.json
scripts/: run_daily.py  seed_sample_data.py
tests/: test_claim_extractor.py  test_gemini_client.py  test_job_service.py  test_podcast_client.py  test_report_builder.py  test_run_daily.py  test_scoring.py  test_state_store.py  test_verifier_service.py
